modified the device spec arrangement and adding database for storing known devices
