# swagger.yaml
@@ -188,6 +188,10 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/wireless_device'
+      db_wireless_devices:
+        type: array
+        items:
+          $ref: '#/definitions/db_wireless_device'
 
   metrics-receiver-configuration:
     type: object
@@ -909,4 +913,13 @@ definitions:
         type: string
       property_last_seen:
         description: Last activity of the property
+        type: string
+  db_wireless_device:
+    type: object
+    properties:
+      wireless_device_identifier:
+        description: unique identifier of the unregistered device
+        type: string
+      wireless_device_name:
+        description: name of the unregistered device
         type: string
